@@ -54,7 +54,7 @@ bu_optind
 bu_plong
 bu_printb
 bu_prmem
-bu_process_id
+bu_pid
 bu_ptbl_free
 bu_ptbl_init
 bu_ptbl_ins
