@@ -364,7 +364,7 @@ compress_external(const struct rt_cache *cache, struct bu_external *external)
 	compressed = 1;
 
     if (!compressed) {
-	CACHE_DEBUG("++++++ [%lu.%lu] Compression failed (ret %d, %zu bytes @ %p to %d bytes max)\n", bu_process_id(), bu_parallel_id(), ret, external->ext_nbytes, (void *) external->ext_buf, compressed_size);
+	CACHE_DEBUG("++++++ [%lu.%lu] Compression failed (ret %d, %zu bytes @ %p to %d bytes max)\n", bu_pid(), bu_parallel_id(), ret, external->ext_nbytes, (void *) external->ext_buf, compressed_size);
 	return;
     }
 
@@ -396,7 +396,7 @@ uncompress_external(const struct rt_cache *cache, const struct bu_external *exte
 	uncompressed = 1;
 
     if (!uncompressed) {
-	CACHE_DEBUG("++++++ [%lu.%lu] decompression failed (ret %d, %zu bytes @ %p to %zu bytes max)\n", bu_process_id(), bu_parallel_id(), ret, external->ext_nbytes, (void *) external->ext_buf, dest->ext_nbytes);
+	CACHE_DEBUG("++++++ [%lu.%lu] decompression failed (ret %d, %zu bytes @ %p to %zu bytes max)\n", bu_pid(), bu_parallel_id(), ret, external->ext_nbytes, (void *) external->ext_buf, dest->ext_nbytes);
 	return;
     }
 
@@ -496,7 +496,7 @@ cache_try_load(const struct rt_cache *cache, const char *name, const struct rt_d
     RT_CK_DB_INTERNAL(internal);
     RT_CK_SOLTAB(stp);
 
-    CACHE_DEBUG("++++ [%lu.%lu] Trying to LOAD %s\n", bu_process_id(), bu_parallel_id(), name);
+    CACHE_DEBUG("++++ [%lu.%lu] Trying to LOAD %s\n", bu_pid(), bu_parallel_id(), name);
 
     e = cache_read_entry(cache, name);
     if (!e) {
@@ -560,10 +560,10 @@ cache_try_store(struct rt_cache *cache, const char *name, const struct rt_db_int
     RT_CK_DB_INTERNAL(internal);
     RT_CK_SOLTAB(stp);
 
-    CACHE_DEBUG("++++ [%lu.%lu] Trying to STORE %s\n", bu_process_id(), bu_parallel_id(), name);
+    CACHE_DEBUG("++++ [%lu.%lu] Trying to STORE %s\n", bu_pid(), bu_parallel_id(), name);
 
     if (rt_obj_prep_serialize(stp, internal, &data_external, &version) || version == (size_t)-1) {
-	CACHE_DEBUG("++++++ [%lu.%lu] Failed to serialize %s\n", bu_process_id(), bu_parallel_id(), name);
+	CACHE_DEBUG("++++++ [%lu.%lu] Failed to serialize %s\n", bu_pid(), bu_parallel_id(), name);
 	return 0; /* can't serialize */
     }
 
@@ -605,13 +605,13 @@ cache_try_store(struct rt_cache *cache, const char *name, const struct rt_db_int
     }
 
     /* get a temporary name unlikely to exist */
-    snprintf(tmpname, MAXPATHLEN, "%s.%d.%d.%lld", name, bu_process_id(), bu_parallel_id(), (long long int)bu_gettime());
+    snprintf(tmpname, MAXPATHLEN, "%s.%d.%d.%lld", name, bu_pid(), bu_parallel_id(), (long long int)bu_gettime());
 
     cache_get_objfile(cache, tmpname, tmppath, MAXPATHLEN);
     bu_file_delete(tmppath); /* okay if it doesn't exist */
 
     if (!cache_create_dir(cache, tmpname)) {
-	CACHE_DEBUG("++++++ [%lu.%lu] Failed to create cache dir %s\n", bu_process_id(), bu_parallel_id(), tmpname);
+	CACHE_DEBUG("++++++ [%lu.%lu] Failed to create cache dir %s\n", bu_pid(), bu_parallel_id(), tmpname);
 	bu_free_external(&attributes_external);
 	bu_free_external(&data_external);
 	return 0; /* no storage */
@@ -623,7 +623,7 @@ cache_try_store(struct rt_cache *cache, const char *name, const struct rt_db_int
 
     focache = fopen(tmppath, "wb");
     if (!focache) {
-	CACHE_DEBUG("++++++ [%lu.%lu] Failed to put cache temp %s\n", bu_process_id(), bu_parallel_id(), tmpname);
+	CACHE_DEBUG("++++++ [%lu.%lu] Failed to put cache temp %s\n", bu_pid(), bu_parallel_id(), tmpname);
 	return 0; /* can't stash */
     }
 
@@ -633,12 +633,12 @@ cache_try_store(struct rt_cache *cache, const char *name, const struct rt_db_int
 	bu_free_external(&db_external);
 	bu_free_external(&attributes_external);
 	bu_free_external(&data_external);
-	CACHE_DEBUG("++++++ [%lu.%lu] Failed to put cache temp %s\n", bu_process_id(), bu_parallel_id(), tmpname);
+	CACHE_DEBUG("++++++ [%lu.%lu] Failed to put cache temp %s\n", bu_pid(), bu_parallel_id(), tmpname);
 	return 0; /* can't stash */
     }
     fclose(focache);
 
-    CACHE_DEBUG("++++++ [%lu.%lu] Successfully wrote cache temp %s\n", bu_process_id(), bu_parallel_id(), tmpname);
+    CACHE_DEBUG("++++++ [%lu.%lu] Successfully wrote cache temp %s\n", bu_pid(), bu_parallel_id(), tmpname);
 
     bu_free_external(&db_external);
     bu_free_external(&attributes_external);
@@ -657,7 +657,7 @@ cache_try_store(struct rt_cache *cache, const char *name, const struct rt_db_int
 	int checkpnt_size = 0;
 	int check_cnt = 0;
 
-	CACHE_DEBUG("++++++ [%lu.%lu] Someone else finished %s first\n", bu_process_id(), bu_parallel_id(), name);
+	CACHE_DEBUG("++++++ [%lu.%lu] Someone else finished %s first\n", bu_pid(), bu_parallel_id(), name);
 
 	while (tmp_file_size != final_file_size && final_file_size > checkpnt_size && check_cnt < 3) {
 	    checkpnt_size = final_file_size;
@@ -667,23 +667,23 @@ cache_try_store(struct rt_cache *cache, const char *name, const struct rt_db_int
 	}
 
 	if (tmp_file_size != final_file_size) {
-	    CACHE_DEBUG("++++++ [%lu.%lu] BUT the file size of %s (%d) doesn't match that of %s (%d)!!!  Giving up.\n", bu_process_id(), bu_parallel_id(), path, final_file_size, tmpname, tmp_file_size);
+	    CACHE_DEBUG("++++++ [%lu.%lu] BUT the file size of %s (%d) doesn't match that of %s (%d)!!!  Giving up.\n", bu_pid(), bu_parallel_id(), path, final_file_size, tmpname, tmp_file_size);
 	    if (!cache->debug) {
 		bu_file_delete(tmppath);
 	    } else {
-		CACHE_DEBUG("++++++ [%lu.%lu] Note: temporary file %s has been left intact for debugging examination.\n", bu_process_id(), bu_parallel_id(), path, tmpname);
+		CACHE_DEBUG("++++++ [%lu.%lu] Note: temporary file %s has been left intact for debugging examination.\n", bu_pid(), bu_parallel_id(), path, tmpname);
 	    }
 	    return 0;
 	}
 
-	CACHE_DEBUG("++++++ [%lu.%lu] No longer need %s\n", bu_process_id(), bu_parallel_id(), tmpname);
+	CACHE_DEBUG("++++++ [%lu.%lu] No longer need %s\n", bu_pid(), bu_parallel_id(), tmpname);
 	bu_file_delete(tmppath);
 
 	if (cache_read_entry(cache, name) != NULL) {
-	    CACHE_DEBUG("++++++ [%lu.%lu] Successfully read %s\n", bu_process_id(), bu_parallel_id(), name);
+	    CACHE_DEBUG("++++++ [%lu.%lu] Successfully read %s\n", bu_pid(), bu_parallel_id(), name);
 	    return 1;
 	} else {
-	    CACHE_DEBUG("++++++ [%lu.%lu] BUT we can't read %s !!!  Giving up.\n", bu_process_id(), bu_parallel_id(), name);
+	    CACHE_DEBUG("++++++ [%lu.%lu] BUT we can't read %s !!!  Giving up.\n", bu_pid(), bu_parallel_id(), name);
 	    return 0;
 	}
     }
@@ -740,7 +740,7 @@ rt_cache_close(struct rt_cache *cache)
     if (!cache)
 	return;
 
-    CACHE_DEBUG("++ [%lu.%lu] Closing cache at %s\n", bu_process_id(), bu_parallel_id(), cache->dir);
+    CACHE_DEBUG("++ [%lu.%lu] Closing cache at %s\n", bu_pid(), bu_parallel_id(), cache->dir);
 
     entry = bu_hash_next(cache->entry_hash, NULL);
     while (entry) {
@@ -789,7 +789,7 @@ rt_cache_open(void)
 	return NULL;
     }
 
-    CACHE_DEBUG("++ [%lu.%lu] Opening cache at %s\n", bu_process_id(), bu_parallel_id(), dir);
+    CACHE_DEBUG("++ [%lu.%lu] Opening cache at %s\n", bu_pid(), bu_parallel_id(), dir);
 
     format = cache_format(cache);
     if (format < 0) {
@@ -825,7 +825,7 @@ rt_cache_open(void)
 
 	count = bu_file_list(bu_vls_cstr(&path), "[A-Z0-9][A-Z0-9]", &matches);
 
-	CACHE_DEBUG("++++ [%lu.%lu] Found V%d cache, deleting %zu object dirs in %s", bu_process_id(), bu_parallel_id(), format, count, bu_vls_cstr(&path));
+	CACHE_DEBUG("++++ [%lu.%lu] Found V%d cache, deleting %zu object dirs in %s", bu_pid(), bu_parallel_id(), format, count, bu_vls_cstr(&path));
 
 	for (i = 0; i < count; i++) {
 	    struct bu_vls subpath = BU_VLS_INIT_ZERO;
@@ -852,7 +852,7 @@ rt_cache_open(void)
 		bu_vls_printf(&subpath, "%s%cobjects%c%s%c%s", dir, BU_DIR_SEPARATOR, BU_DIR_SEPARATOR, matches[i], BU_DIR_SEPARATOR, submatches[j]);
 		bu_file_delete(bu_vls_cstr(&subpath));
 
-		CACHE_DEBUG("++++ [%lu.%lu] Deleting %s", bu_process_id(), bu_parallel_id(), bu_vls_cstr(&subpath));
+		CACHE_DEBUG("++++ [%lu.%lu] Deleting %s", bu_pid(), bu_parallel_id(), bu_vls_cstr(&subpath));
 	    }
 	    bu_argv_free(subcount, submatches);
 
@@ -860,7 +860,7 @@ rt_cache_open(void)
 	    bu_vls_printf(&subpath, "%s%cobjects%c%s", dir, BU_DIR_SEPARATOR, BU_DIR_SEPARATOR, matches[i]);
 	    bu_file_delete(bu_vls_cstr(&subpath));
 
-	    CACHE_DEBUG("++++ [%lu.%lu] Deleting %s", bu_process_id(), bu_parallel_id(), bu_vls_cstr(&subpath));
+	    CACHE_DEBUG("++++ [%lu.%lu] Deleting %s", bu_pid(), bu_parallel_id(), bu_vls_cstr(&subpath));
 
 	    bu_vls_free(&subpath);
 	}
@@ -868,7 +868,7 @@ rt_cache_open(void)
 
 	bu_file_delete(bu_vls_cstr(&path));
 
-	CACHE_DEBUG("++++ [%lu.%lu] Deleting %s", bu_process_id(), bu_parallel_id(), bu_vls_cstr(&path));
+	CACHE_DEBUG("++++ [%lu.%lu] Deleting %s", bu_pid(), bu_parallel_id(), bu_vls_cstr(&path));
 
 	bu_vls_trunc(&path, 0);
 	bu_vls_printf(&path, "%s%c%s", dir, BU_DIR_SEPARATOR, "format");
